# pyqpmad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  qpmad_pywrap.cpp  recipe.yaml  test_qpmad.py
.github/workflows/: wheels.yml
